--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
     "typescript": "4.8.4"
