--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0",
+    "swr": "^1.3.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
