Adding api key and tasks db

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+NOTION_API_KEY="secret_5BNKwFnzVRRecfMzzwc0CrXih9fkLa0dPm7IOXyRBuE"
 NOTION_DB_GROUPS="00f8bbb516f64ffa9a5b64c7a0aaaaac"
 NOTION_DB_CHARACTERS="b28f5db366f146bf8cde17a45dbec879"
 NOTION_DB_LOCATIONS="e5a4430d8ba7479b95c8cbbebd10e501"
+NOTION_DB_TASKS="ac302006b10f449591228d96fc96eb6c"
