--- a/notion/notion-settings.json
+++ b/notion/notion-settings.json
@@ -1,5 +1,6 @@
 {
     "dbid_groups": "00f8bbb516f64ffa9a5b64c7a0aaaaac",
     "dbid_characters": "b28f5db366f146bf8cde17a45dbec879",
-    "dbid_locations": "e5a4430d8ba7479b95c8cbbebd10e501"
+    "dbid_locations": "e5a4430d8ba7479b95c8cbbebd10e501",
+    "dbid_tasks": "ac302006b10f449591228d96fc96eb6c"
 }
