playing with page & block retrieval with notion

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ NOTION_DB_GROUPS="00f8bbb516f64ffa9a5b64c7a0aaaaac"
 NOTION_DB_CHARACTERS="b28f5db366f146bf8cde17a45dbec879"
 NOTION_DB_LOCATIONS="e5a4430d8ba7479b95c8cbbebd10e501"
 NOTION_DB_TASKS="ac302006b10f449591228d96fc96eb6c"
+NOTION_SESSION_22="048195437957478b8caa65e4079dcdc6"
+NOTION_SESSION_23="34ac905817474f1e96ad83384f774afa"
