--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-icons": "^4.6.0",
     "swr": "^1.3.0",
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/react-grid-layout": "^1.3.2",
     "sass": "^1.56.0"
   }
 }
